Added new classes and minor layout changes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<!-- 
-todo: 
-* hover effects
--->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -16,36 +11,40 @@ todo:
 
 <body>
     <div class="navbar">
-        <h1>Header logo</h1>
+        <h1>CatHub</h1>
         <div class="navlinks">
-            <a href="#">About</a><a href="#">Contact</a><a href="#">Source</a></div></div>
-            <section class="main">
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+            <a href="#">Source</a>
+        </div>
+    </div>
+    <section class="main">
         <div class="hero-left">
-            <div class="title">This website is awesome</div>
-            <div class="subtitle">This website has some subtext that goes here under the
+            <div class="title">This cat is awesome</div>
+            <div class="subtitle">This cat has some subtext that goes here under the
                 main title. Its a smaller font and the color is lower contrast</div>
             <button class="signup">Sign up</button>
         </div>
-        <div class="hero-right">this is a placeholder for an image</div>
+        <div class="hero-right"></div>
     </section>
     <section class="somerandominfo">
-        <h1>Some random information.</h1>
+        <h1>Some random cat.</h1>
         <div class="hovercards">
             <div class="card">
-                <div></div>
-                <p>this is some subtext under an illustration or image</p>
+                <div class="card1"></div>
+                <p>this is some cat</p>
             </div>
             <div class="card">
-                <div></div>
-                <p>this is some subtext under an illustration or image</p>
+                <div class="card2"></div>
+                <p>this is some cat</p>
             </div>
             <div class="card">
-                <div></div>
-                <p>this is some subtext under an illustration or image</p>
+                <div class="card3"></div>
+                <p>this is some cat</p>
             </div>
             <div class="card">
-                <div></div>
-                <p>this is some subtext under an illustration or image</p>
+                <div class="card4"></div>
+                <p>this is some cat</p>
             </div>
         </div>
         </div>
@@ -64,7 +63,7 @@ todo:
         </div>
         <button class="signup">Sign up</button>
     </section>
-    <section class="copyright">Copyright &copy The Odin Project 2021</section>
+    <section class="copyright">Copyright &copy The Cat Project 2021</section>
 </body>
 
 </html>
